@@ -1,22 +1,22 @@
 package com.fitpet.server.meal.application.service;
 
+import com.fitpet.server.meal.application.dto.MealCreateCommand;
+import com.fitpet.server.meal.application.dto.MealDetailInfo;
+import com.fitpet.server.meal.application.dto.MealResult;
+import com.fitpet.server.meal.application.dto.MealUpdateCommand;
 import com.fitpet.server.meal.application.mapper.MealMapper;
 import com.fitpet.server.meal.domain.entity.Meal;
 import com.fitpet.server.meal.domain.entity.MealTime;
 import com.fitpet.server.meal.domain.repository.MealRepository;
-import com.fitpet.server.meal.presentation.dto.request.MealCreateRequest;
-import com.fitpet.server.meal.presentation.dto.request.MealUpdateRequest;
-import com.fitpet.server.meal.presentation.dto.response.MealCreateResponse;
-import com.fitpet.server.meal.presentation.dto.response.MealDetailResponse;
-import com.fitpet.server.meal.presentation.dto.response.MealUpdateResponse;
 import com.fitpet.server.mission.application.service.MissionCheckService;
 import com.fitpet.server.shared.exception.BusinessException;
 import com.fitpet.server.shared.exception.ErrorCode;
+import com.fitpet.server.shared.s3.S3Service;
+import com.fitpet.server.shared.s3.type.ImageType;
 import com.fitpet.server.user.domain.entity.User;
 import com.fitpet.server.user.domain.repository.UserRepository;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -33,61 +33,65 @@ public class MealServiceImpl implements MealService {
     private final MissionCheckService missionCheckService;
 
     @Override
-    public MealCreateResponse createMeal(Long userId, MealCreateRequest request) {
+    public MealResult createMeal(Long userId, MealCreateCommand command) {
         User user = findUserById(userId);
-        Meal meal = mealMapper.toEntity(request, user);
 
-        String imageKey = s3Service.createImageKey(userId);
+        Meal meal = mealMapper.toEntity(command, user);
+
+        String imageKey = s3Service.createImageKey(userId, ImageType.MEAL);
         meal.setImageUrl(imageKey);
+
         Meal savedMeal = mealRepository.save(meal);
-        missionCheckService.updateMealMissions(userId, meal.getDay(),
-                MealTime.fromSequence(meal.getSequence()));
+        missionCheckService.updateMealMissions(userId, meal.getDay(), MealTime.fromSequence(meal.getSequence()));
 
         String uploadUrl = s3Service.generatePresignedPutUrl(imageKey);
 
-        return mealMapper.toCreateResponse(savedMeal, uploadUrl);
+        return mealMapper.toResult(savedMeal, uploadUrl);
     }
 
     @Override
-    public MealUpdateResponse updateMeal(Long userId, Long mealId, MealUpdateRequest request) {
+    public MealResult updateMeal(Long userId, Long mealId, MealUpdateCommand command) {
         User user = findUserById(userId);
         Meal meal = findMealById(mealId);
         authorizeMealOwner(user, meal);
 
-        if (request.getTitle() != null) {
-            meal.setTitle(request.getTitle());
+        if (command.title() != null) {
+            meal.setTitle(command.title());
         }
-        if (request.getKcal() != null) {
-            meal.setKcal(request.getKcal());
+        if (command.kcal() != null) {
+            meal.setKcal(command.kcal());
         }
-        if (request.getSequence() != null) {
-            meal.setSequence(request.getSequence());
+        if (command.sequence() != null) {
+            meal.setSequence(command.sequence());
         }
 
-        if (request.getChangeImage() != null && request.getChangeImage()) {
+        if (Boolean.TRUE.equals(command.changeImage())) {
             if (meal.getImageUrl() != null && !meal.getImageUrl().isBlank()) {
                 s3Service.deleteObject(meal.getImageUrl());
             }
-            String newImageKey = s3Service.createImageKey(userId);
+
+            String newImageKey = s3Service.createImageKey(userId, ImageType.MEAL);
             meal.setImageUrl(newImageKey);
             String uploadUrl = s3Service.generatePresignedPutUrl(newImageKey);
 
-            return mealMapper.toUpdateResponse(newImageKey, uploadUrl);
-
-        } else {
-            return MealUpdateResponse.builder().build();
+            return mealMapper.toUpdateResult(newImageKey, uploadUrl);
         }
+
+        return MealResult.builder()
+                .mealId(meal.getId())
+                .imageUrl(meal.getImageUrl())
+                .build();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<MealDetailResponse> getMealsByDate(Long userId, LocalDate day) {
+    public List<MealDetailInfo> getMealsByDate(Long userId, LocalDate day) {
         User user = findUserById(userId);
         List<Meal> meals = mealRepository.findByUserAndDay(user, day);
 
         return meals.stream()
-                .map(meal -> mealMapper.toMealResponse(meal, s3Service))
-                .collect(Collectors.toList());
+                .map(meal -> mealMapper.toDetailInfo(meal, s3Service))
+                .toList();
     }
 
     @Override
